test/langtools/tools/javac/reflect/quoted/TestGenericMethodCall.out
TestGenericMethodCall.java:44:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:45:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:46:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:47:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:48:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:49:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:53:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:54:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:55:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:56:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:57:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:58:29: compiler.err.quoted.lambda.must.be.explicit
TestGenericMethodCall.java:62:40: compiler.err.cant.infer.quoted.lambda.return.type: void,java.lang.String
TestGenericMethodCall.java:63:40: compiler.err.cant.infer.quoted.lambda.return.type: java.lang.String,void
TestGenericMethodCall.java:67:49: compiler.err.bad.quoted.lambda.null.return
TestGenericMethodCall.java:68:40: compiler.err.bad.quoted.lambda.null.return
TestGenericMethodCall.java:69:54: compiler.err.bad.quoted.lambda.null.return
TestGenericMethodCall.java:70:45: compiler.err.bad.quoted.lambda.null.return
TestGenericMethodCall.java:74:49: compiler.err.unexpected.lambda
TestGenericMethodCall.java:75:40: compiler.err.unexpected.lambda
TestGenericMethodCall.java:76:56: compiler.err.unexpected.lambda
TestGenericMethodCall.java:76:67: compiler.err.unexpected.lambda
TestGenericMethodCall.java:77:47: compiler.err.unexpected.lambda
TestGenericMethodCall.java:77:58: compiler.err.unexpected.lambda
TestGenericMethodCall.java:81:49: compiler.err.unexpected.mref
TestGenericMethodCall.java:82:40: compiler.err.unexpected.mref
TestGenericMethodCall.java:83:56: compiler.err.unexpected.mref
TestGenericMethodCall.java:83:67: compiler.err.unexpected.mref
TestGenericMethodCall.java:84:47: compiler.err.unexpected.mref
TestGenericMethodCall.java:84:58: compiler.err.unexpected.mref
30 errors
